--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -12,6 +13,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
    <left>
       <Pane prefHeight="1080.0" prefWidth="0.0" BorderPane.alignment="CENTER">
@@ -62,7 +65,16 @@
          <children>
             <AnchorPane fx:id="containerCalendario" layoutX="15.0" layoutY="55.0" />
             <Separator layoutX="-2.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="1088.0" prefWidth="0.0" />
-            <Separator layoutX="1.0" layoutY="373.0" prefHeight="0.0" prefWidth="511.0" />
+            <Separator fx:id="separatorSotto" layoutX="1.0" layoutY="373.0" prefHeight="0.0" prefWidth="511.0" />
+
+            <!-- Chatbot container ancorato sotto al separator -->
+            <AnchorPane fx:id="chatBotContainer" layoutY="380.0" prefWidth="500.0" prefHeight="400.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
+               <children>
+                  <TextArea fx:id="chatArea" editable="false" wrapText="true" prefHeight="360.0" />
+                  <TextField fx:id="inputField" layoutY="360.0" prefHeight="40.0" />
+                  <Button fx:id="inviaButton" text="Invia" layoutX="420.0" layoutY="360.0" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </right>
