--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -2,10 +2,15 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -13,8 +18,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
    <left>
       <Pane prefHeight="1080.0" prefWidth="0.0" BorderPane.alignment="CENTER">
@@ -24,7 +27,7 @@
       </Pane>
    </left>
    <center>
-      <AnchorPane BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="1083.0" prefWidth="1359.0" BorderPane.alignment="CENTER">
          <children>
             <VBox layoutX="12.0" layoutY="20.0" prefHeight="200.0" styleClass="pane_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="20.0">
                <children>
@@ -53,6 +56,18 @@
                   </ScrollPane>
                </children>
             </VBox>
+            <VBox layoutX="20.0" layoutY="442.0">
+               <children>
+                  <LineChart fx:id="graficoMassimali" maxWidth="1000.0">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </LineChart>
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
    </center>
@@ -67,12 +82,11 @@
             <Separator layoutX="-2.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="1088.0" prefWidth="0.0" />
             <Separator fx:id="separatorSotto" layoutX="1.0" layoutY="373.0" prefHeight="0.0" prefWidth="511.0" />
 
-            <!-- Chatbot container ancorato sotto al separator -->
-            <AnchorPane fx:id="chatBotContainer" layoutY="380.0" prefWidth="500.0" prefHeight="400.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
+            <AnchorPane fx:id="chatBotContainer" layoutY="380.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
                <children>
-                  <TextArea fx:id="chatArea" editable="false" wrapText="true" prefHeight="360.0" />
+                  <TextArea fx:id="chatArea" editable="false" prefHeight="360.0" wrapText="true" />
                   <TextField fx:id="inputField" layoutY="360.0" prefHeight="40.0" />
-                  <Button fx:id="inviaButton" text="Invia" layoutX="420.0" layoutY="360.0" />
+                  <Button fx:id="inviaButton" layoutX="420.0" layoutY="360.0" text="Invia" />
                </children>
             </AnchorPane>
          </children>
