--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -2,11 +2,13 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -56,9 +58,13 @@
                   </ScrollPane>
                </children>
             </VBox>
-            <VBox layoutX="20.0" layoutY="442.0">
+            <VBox layoutX="20.0" layoutY="442.0" />
+            <HBox layoutX="55.0" layoutY="442.0" prefHeight="354.0" prefWidth="1111.0">
                <children>
-                  <LineChart fx:id="graficoMassimali" maxWidth="1000.0">
+                  <MenuButton fx:id="choiceEsercizioScheda" mnemonicParsing="false" text="Scegli l'esercizio">
+                  <items> </items>
+               </MenuButton>
+                  <LineChart fx:id="graficoMassimali">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
@@ -66,8 +72,16 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                   </LineChart>
+                  <BarChart fx:id="graficoPresenzePalestra" prefHeight="354.0" prefWidth="504.0">
+                    <xAxis>
+                      <CategoryAxis label="Mesi" side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis label="Numero prenotazioni" side="LEFT" />
+                    </yAxis>
+                  </BarChart>
                </children>
-            </VBox>
+            </HBox>
          </children>
       </AnchorPane>
    </center>
