--- a/src/main/resources/Fxml/Client/ClientMenuView/MyProfile.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/MyProfile.fxml
@@ -44,6 +44,14 @@
                                     <Insets top="50.0" />
                                  </VBox.margin>
                               </Label>
+                              <Label fx:id="labelGenere" text="Genere">
+                                 <font>
+                                    <Font name="Arial" size="15.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Label>
                               <Label fx:id="statoAbbonamentoSuperiore" text="Stato Abbonamento:">
                                  <font>
                                     <Font name="Arial Bold" size="20.0" />
@@ -307,14 +315,6 @@
                                                 <Font name="Arial Bold" size="20.0" />
                                              </font>
                                           </Label>
-                                          <Label text="Percentuale massa grassa:">
-                                             <font>
-                                                <Font name="Arial Bold" size="20.0" />
-                                             </font>
-                                             <VBox.margin>
-                                                <Insets top="20.0" />
-                                             </VBox.margin>
-                                          </Label>
                                        </children>
                                        <HBox.margin>
                                           <Insets left="10.0" />
@@ -338,7 +338,7 @@
                                                 <Font name="Arial Bold" size="20.0" />
                                              </font>
                                           </Label>
-                                          <Label fx:id="labelPercentualeGrasso" text="\%">
+                                          <Label fx:id="labelPercentualeGrasso">
                                              <font>
                                                 <Font name="Arial Bold" size="20.0" />
                                              </font>
