--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -34,7 +34,7 @@
         <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED" BorderPane.alignment="CENTER">
             <content>
                 <!-- VBox root -->
-                <VBox spacing="40">
+                <VBox spacing="40" fx:id="containerRoot">
                     <padding>
                         <Insets bottom="20" left="12" right="12" top="20" />
                     </padding>
@@ -68,7 +68,7 @@
 
 
                     <!-- Sezione grafici -->
-                    <HBox spacing="20" VBox.vgrow="ALWAYS">
+                    <HBox spacing="20" VBox.vgrow="ALWAYS" fx:id="containerGrafici">
                         <!-- Colonna 1 -->
                         <VBox alignment="TOP_CENTER" spacing="8" HBox.hgrow="ALWAYS">
                             <children>
